[tool.poetry]
name = "hexlet-pytest"
version = "0.1.0"
description = ""
authors = ["usman sakhbeev <<sahbeyev@gmail.com>>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
